src/styles/FixedSlide.scss
.fixed-slide {
  position: relative;
  display: block;
  z-index: 1;
  width: 100%;
  height: 100vh;
  z-index: 1;
  background-color: $black;

  // Uncomment if you want the last slide to
  // scroll out of view and not be fixed
  &:last-child {
    z-index: 0;
    height: 200vh;
    margin-top: -100vh;

    .fixed-slide__inner {
      position: absolute;
      background-attachment: scroll;

      @media(max-width: $mobile) {
        position: absolute;
      }
    }

    .fixed-slide__clip {
      position: sticky;
      height: 100vh;
      clip: none;
    }
  }

  &__inner {
    transform: translateZ(0);
    position: fixed;
    overflow: hidden;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    background-attachment: scroll;
    background-size: cover;
    background-position: center center;

    @media(max-width: $mobile) {
      background-attachment: fixed;
    }
  }

  &__title {
    max-width: 756px;
    padding-bottom: 0.25em;

    a {
      color: currentColor;
    }
  }

  &__link {
    text-decoration: none;
    color: currentColor;
  }

  &__bg,
  &__content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    .container{
      width: calc(100% - 50px);
    }
  }

  &__content {
    padding-top: 160px;
    color: $white;
  }

  // &__bg {
  //   object-fit: cover;
  //   object-position: center center;
  // }

  &__clip {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    clip: rect(0, auto, auto, 0);
    // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
  }
}

//Gatsby Image Wrapper 
.gatsby-image-wrapper img{
  padding: 0;
}

